--- a/src/components/Article/less/articleList.less
+++ b/src/components/Article/less/articleList.less
@@ -2,6 +2,28 @@
 
 @mi-layout: ~'@{mi-prefix}layout';
 
-.main-container {
-  background: var(--mi-sider-color, @mi-sider-color);
+.article-container {
+  padding: 12px 15px;
+  background: var(--mi-card-color, @mi-card-color);
+  .item {
+    border-radius: 10px;
+
+    // background: var(--mi-card-color, @mi-card-color);
+  }
+  .item:hover {
+    transition: all 300ms;
+    cursor: pointer;
+    background: var(--mi-card-hover-color, @mi-card-hover-color);
+  }
+  .title {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+  .title,
+  .tips,
+  .desc {
+    font-size: 14px;
+    color: var(--mi-notice-text-color, @mi-font-color);
+  }
 }
