--- a/src/components/Article/less/hotArticle.less
+++ b/src/components/Article/less/hotArticle.less
@@ -3,7 +3,8 @@
 @mi-layout: ~'@{mi-prefix}layout';
 
 .hot-container {
-  background: var(--mi-sider-color, @mi-sider-color);
+  padding: 10px 0;
+  background: var(--mi-card-color, @mi-card-color);
   box-shadow: 3px 4px 5px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
   border-radius: 10px;
@@ -12,16 +13,20 @@
     border-bottom: 1px solid rgb(236, 235, 235);
     .hot-title {
       font-weight: bold;
+      color: var(--mi-notice-text-color, @mi-font-color);
+
+      margin-top: 10px;
       margin-left: 10px;
     }
   }
   .hot-group {
-    padding: 10px 10px 30px 10px;
+    padding: 10px;
     .article-item {
+      position: relative;
       cursor: pointer;
       margin-top: 10px;
       display: flex;
-      padding: 5px;
+      padding: 10px;
       // box-shadow: 0 2px 2px rgba(0, 0, 0, 0.12), 0 0 5px rgba(0, 0, 0, 0.06);
       transition: 300ms;
       .item-left {
@@ -33,6 +38,7 @@
       .item-right {
         flex: 1;
         .article-title {
+          font-weight: bold;
           font-size: 12px;
           color: #697175;
           overflow: hidden;
@@ -42,7 +48,7 @@
           justify-content: flex-start;
           align-items: center;
           margin-top: 10px;
-          font-size: 10px;
+          font-size: 14px;
           span {
             color: #929191;
             margin-left: 2px;
