--- a/src/components/category/less/category.less
+++ b/src/components/category/less/category.less
@@ -3,40 +3,53 @@
 @mi-layout: ~'@{mi-prefix}layout';
 
 .category-list {
-    border-radius: 10px;
-    // backdrop-filter: blur(5px);
-    background: var(--mi-sider-color, @mi-sider-color);
-    box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.2);
-    width: 170px;
-    padding: 10px;
+  border-radius: 10px;
+  // backdrop-filter: blur(5px);
+  background: var(--mi-card-color, @mi-card-color);
+  box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.2);
+  width: 170px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s ease;
+  li {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    transition: all .3s ease;
-    li {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-radius: 5px;
-      text-align: left;
-      width: 100%;
-      padding: 10px 10px;
-      span{
-        color: #777777;
-        transition: 300ms;
-      }
-    }
-    li:hover {
-      color: white;
-      cursor: pointer;
-      background:rgba(0, 49, 154, 0.08);
-      // transition: all 0.5s;
-      span{
-        font-weight: bold;
-        transform: translateX(5px);
-      }
-    }
-    .empty {
-      color: var(--mi-notice-text-color, @mi-font-color);
+    border-radius: 5px;
+    text-align: left;
+    font-weight: bold;
+    width: 100%;
+    padding: 10px 10px;
+    span {
+      color: var(--mi-theme-color, @mi-theme-color);
+      transition: 300ms;
     }
   }
+  li:hover {
+    // color: white;
+    cursor: pointer;
+    background: var(--mi-navbar-hover-color, @mi-navbar-hover-color);
+    // transition: all 0.5s;
+    span {
+      color: var(--mi-info-color, @mi-header-logo-bg-color);
+      font-weight: bold;
+      transform: translateX(5px);
+    }
+  }
+  .active {
+    transition: 300ms;
+    font-weight: bold;
+    background: var(--mi-navbar-hover-color, @mi-navbar-hover-color);
+    span {
+      color: var(--mi-info-color, @mi-header-logo-bg-color);
+    }
+  }
+  .mb-sm {
+    margin-bottom: 6px;
+  }
+  .empty {
+    color: var(--mi-notice-text-color, @mi-font-color);
+  }
+}
