--- a/src/pages/layout/less/layout-page.less
+++ b/src/pages/layout/less/layout-page.less
@@ -23,18 +23,16 @@
       background-image: url('../../../static/images/logo.png');
       background-size: cover;
     }
-    .btn-group{
+    .btn-group {
       display: flex;
       margin-right: 20px;
-      .themeIcon{
+      .themeIcon {
         display: flex;
         padding: 8px;
         margin-right: 20px;
         color: white;
-        
       }
     }
-
   }
   .content {
     width: 1100px;
@@ -45,15 +43,13 @@
     margin: 0 auto;
 
     min-height: calc(100vh - 64px);
-  
- 
-    .nav{
+
+    .nav {
       width: 190px;
       padding: 10px;
       height: auto;
-
     }
-    .main{
+    .main {
       flex: 1;
       max-width: 100%;
       position: relative;
@@ -61,23 +57,21 @@
       transition: none;
       margin: 10px;
     }
-    .aside{
-      flex-basis: 266px;
-      margin: 10px 0 0 1.236rem;
-
+    .aside {
+      width: 266px;
+      margin: 10px 0 0 0.336rem;
     }
   }
- 
 }
 
-@media (max-width: 960px){
-  .nav{
+@media (max-width: 960px) {
+  .nav {
     display: none;
   }
-  .main{
+  .main {
     width: 100%;
   }
-  .aside{
+  .aside {
     display: none;
   }
 }
