--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,9 +1,9 @@
 @import './default.less';
 
-@mi-theme-color: #f6ca9d;
+@mi-theme-color: #c0bfbf;
 @mi-body-color: #333333;
 @mi-header-bg-color: #1d1e23;
-@mi-header-logo-bg-color: #1d1e23;
+@mi-header-logo-bg-color: #f8f5f2;
 @mi-header-logo-text-color: #f6ca9d;
 @mi-header-logo-border-bottom-color: #232427;
 @mi-header-trigger-hover-color: rgba(0, 0, 0, 0.2);
@@ -25,7 +25,7 @@
 @mi-menu-active-color: #000000;
 @mi-menu-sub-color: #808695;
 @mi-menu-sub-bg-color: #1d1e23;
-@mi-menu-active-sub-color: #f6ca9d;
+@mi-menu-active-sub-color: #525252cc;
 @mi-history-bg-color: #1d1e23;
 @mi-history-item-bg-color: rgba(255, 255, 255, 0.2);
 @mi-history-item-text-color: #ffffff;
@@ -41,7 +41,7 @@
 @mi-passport-color: #ffffff;
 @mi-passport-line-color: #3f3f3f;
 @mi-passport-bg-color: #212121;
-@mi-passport-icon-color: #9F9F9F;
+@mi-passport-icon-color: #9f9f9f;
 @mi-passport-text-color: #fff;
 @mi-passport-strength-color: #999;
 @mi-passport-mask-bg-color: #ffffff;
@@ -49,7 +49,7 @@
 @mi-passport-submit-color: #ffffff;
 @mi-passport-submit-gradual-start-color: #000000;
 @mi-passport-submit-gradual-end-color: #f6ca9d;
-@mi-tab-nav-color: rgba(255, 255, 255, .6);
+@mi-tab-nav-color: rgba(255, 255, 255, 0.6);
 @mi-tab-nav-border-bottom-color: rgba(255, 255, 255, 0.15);
 @mi-selection-color: #ffffff;
 @mi-selection-bg-color: #1d1e23;
@@ -72,10 +72,14 @@
 @mi-form-label-color: #999;
 @mi-error-color: #ed4014;
 @mi-danger-color: #ff4d4f;
-@mi-success-color: #2F9688;
+@mi-success-color: #2f9688;
 @mi-warning-color: #ff9900;
 @mi-info-color: #2db7f5;
 @mi-font-color: #ffffff;
 @mi-link-color: #f6ca9d;
 @mi-primary-color: #f6ca9d;
 @mi-captcha-bg-color: #636363;
+
+@mi-card-color: rgba(68, 68, 68, 0.8);
+@mi-card-hover-color: #525252cc;
+@mi-navbar-hover-color: #525252cc; ;
