--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,12 +1,12 @@
 @import './default.less';
 
-@mi-theme-color: #2F9688;
-@mi-body-color: #f5f7f9;
-@mi-header-bg-color: #2F9688;
+@mi-theme-color: #2f9688;
+@mi-body-color: #f0f0f0;
+@mi-header-bg-color: #2f9688;
 @mi-header-logo-bg-color: #226a62;
 @mi-header-logo-text-color: #ffffff;
 @mi-header-logo-border-bottom-color: #ffffff;
-@mi-header-trigger-hover-color: rgba(0, 0, 0, 0.1);
+@mi-header-trigger-hover-color: rgba(0, 49, 154, 0.08);
 @mi-header-paletter-item-border-color: #e1e1e1;
 @mi-breadcrumb-last-child-color: #999;
 @mi-table-color: #e4e4e4;
@@ -22,16 +22,16 @@
 @mi-anchor-icon-color: #7b7b7b;
 @mi-anchor-stick-bg-color: #fff;
 @mi-menu-color: #666;
-@mi-menu-active-color: rgba(47, 150, 136, .2);
+@mi-menu-active-color: rgba(47, 150, 136, 0.2);
 @mi-menu-sub-color: #ccc;
 @mi-menu-sub-bg-color: #fff;
-@mi-menu-active-sub-color: rgba(47, 150, 136, .6);
+@mi-menu-active-sub-color: rgba(47, 150, 136, 0.6);
 @mi-history-bg-color: #dedede;
 @mi-history-item-bg-color: #fff;
 @mi-history-item-text-color: #666;
 @mi-dropdown-bg-color: #fff;
 @mi-dropdown-text-color: #666;
-@mi-dropdown-item-hover-color: rgba(47, 150, 136, .2);
+@mi-dropdown-item-hover-color: rgba(47, 150, 136, 0.2);
 @mi-modal-bg-color: #fff;
 @mi-modal-text-color: #333;
 @mi-modal-content-color: rgba(51, 51, 51, 0.85);
@@ -41,19 +41,19 @@
 @mi-passport-color: #ffffff;
 @mi-passport-line-color: #3f3f3f;
 @mi-passport-bg-color: #212121;
-@mi-passport-icon-color: #9F9F9F;
+@mi-passport-icon-color: #9f9f9f;
 @mi-passport-text-color: #333;
 @mi-passport-strength-color: #999;
 @mi-passport-mask-bg-color: #ffffff;
 @mi-passport-remember-color: #ffffff;
 @mi-passport-submit-color: #ffffff;
 @mi-passport-submit-gradual-start-color: #000000;
-@mi-passport-submit-gradual-end-color: #2F9688;
+@mi-passport-submit-gradual-end-color: #2f9688;
 @mi-tab-nav-color: #999;
 @mi-tab-nav-border-bottom-color: rgba(162, 162, 162, 0.15);
 @mi-selection-color: #ffffff;
 @mi-selection-bg-color: #dedede;
-@mi-captcha-success-bg-color: rgba(47, 150, 136, .2);
+@mi-captcha-success-bg-color: rgba(47, 150, 136, 0.2);
 @mi-card-tab-color: #333;
 @mi-popover-bg-color: #ffffff;
 @mi-notice-title-color: #000000;
@@ -72,10 +72,14 @@
 @mi-form-label-color: #999;
 @mi-error-color: #ed4014;
 @mi-danger-color: #ff4d4f;
-@mi-success-color: #2F9688;
+@mi-success-color: #2f9688;
 @mi-warning-color: #ff9900;
-@mi-info-color: #2db7f5;
+@mi-info-color: #1890ff;
 @mi-font-color: #fff;
-@mi-link-color: #2F9688;
-@mi-primary-color: #2F9688;
+@mi-link-color: #2f9688;
+@mi-primary-color: #2f9688;
 @mi-captcha-bg-color: #636363;
+
+@mi-card-color: rgba(255, 255, 255, 0.6);
+@mi-card-hover-color: #ffffff;
+@mi-navbar-hover-color: #e8f3ff;
